Various fixes suggested by FindBugs